--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 										</div>
 										<div class="media-body">
 											<h4>Dell</h4>
-											<p>Senior Full Stack Developer <br />Bangalore, India</p>
+											<p>Software Engineer 2 <br />Bangalore, India</p>
 										</div>
 									</div>
 								</li>
