--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 						</div>
 						<div class="item">
 							<div class="testi_item">
-								<p>Aneesh is a such a good developer. His attention to detail is uncanny. He singlhandedly developed a crucial web application for Dell in record time!</p>
+								<p>Aneesh is a good developer. His attention to detail is uncanny. We worked together on a crucial web application for Dell and delivered it in record time!</p>
 								<h4>Devashish Shivmurthy</h4>
 							</div>
 						</div>
