Changed about me

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 									<h6>Hi, I am </h6>
 									<h3>Aneesh Melkot</h3>
 									<h4>I want to change the world. But they didn't give me the source code.</h4>
-									<p>Current grad student in CS at UTA. Former Senior Full Stack Developer at DELL and EMC Square.</p>
+									<p>Current grad student in CS at UTA. Former Software Engineer at DELL and EMC Square.</p>
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 17th December, 1992</a></li>
 										<li><a href="#"><i class="lnr lnr-phone-handset"></i> +1 (217) 904 2873</a></li>
