--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 17th December, 1992</a></li>
 										<li><a href="#"><i class="lnr lnr-phone-handset"></i> +1 (217) 904 2873</a></li>
 										<li><a href="#"><i class="lnr lnr-envelope"></i> aneeshmelkot@gmail.com</a></li>
-										<li><a href="#"><i class="lnr lnr-home"></i> 800 Bering Dr</a></li>
+										<li><a href="#"><i class="lnr lnr-home"></i> 800 Bering Dr, Arlington, TX, 76013</a></li>
 									</ul>
 									<ul class="list personal_social">
 										<li><a href="https://www.facebook.com/aneeshmelkot/"><i class="fa fa-facebook"></i></a></li>
